force-app/main/default/objects/Project__c/fields/Total_Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Sold__c</fullName>
    <description>This provides us the count of flats sold</description>
    <label>Total Units Sold</label>
    <summaryFilterItems>
        <field>Module__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Unit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Module__c.Unit_Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Module__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>