force-app/main/default/objects/Project__c/fields/Township_Name__c.field-meta.xml
<CustomField>
    <fullName>Township_Name__c</fullName>
    <label>Township Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>