force-app/main/default/objects/Project__c/fields/Type_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Project__c</fullName>
    <label>Type Of Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>