force-app/main/default/objects/Project__c/fields/Unique_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>