force-app/main/default/objects/Project__c/fields/Visible_to_Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Portal_Users__c</fullName>
    <label>Visible to Portal Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>