force-app/main/default/objects/Project__c/recordTypes/Project_Land.recordType-meta.xml
<RecordType>
    <fullName>Project_Land</fullName>
    <active>true</active>
    <label>Project(Land)</label>
</RecordType>